// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the items is an empty array 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  grid-gap: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  grid-gap: 0.5rem;
  height: calc(100vh - 8rem);
  overflow: auto;
}

.emotion-3 {
  text-align: center;
}

.emotion-4 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto auto;
  grid-gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  cursor: pointer;
}

<div
    class="fui-FluentProvider fui-FluentProviderr5 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <div
        data-testid="test-SidePanel"
      >
        <div
          data-testid="test-Content"
        >
          <div
            class="emotion-1"
          >
            <span
              class="fui-Input r1oeeo9n fui-SearchBox ___13yg2oi_15g8mz3 f1f5gg8d fhxju0i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fjuset5 f1xzfw5u"
            >
              <span
                class="fui-Input__contentBefore r1572tok fui-SearchBox__contentBefore"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.73 13.44a6.5 6.5 0 1 1 .7-.7l3.42 3.4a.5.5 0 0 1-.63.77l-.07-.06-3.42-3.41Zm-.71-.71A5.54 5.54 0 0 0 14 8.5a5.5 5.5 0 1 0-1.98 4.23Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <input
                class="fui-Input__input r12stul0 fui-SearchBox__input ___69a85s0_ca35df0 fk8j09s f1vdfbxk f18izjht fcoa6sg"
                placeholder="Search members"
                type="search"
                value=""
              />
              <span
                class="fui-Input__contentAfter r1572tok fui-SearchBox__contentAfter ___yrbim60_1xrsupy f1cnd47f f1ufnopg fniina8 f3tsq5r f1a3p1vp"
              >
                <span
                  aria-label="clear"
                  class="fui-SearchBox__dismiss r1pvzcuu"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    aria-hidden="true"
                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <div
              class="emotion-2"
            >
              <div
                class="emotion-3"
              >
                No members found.
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="test-Renderer"
        >
          <span
            aria-label="View members"
            class="fui-Text emotion-4 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            <button
              class="fui-Button r1alrhcs ___cpe5h10_1yhfyj7 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f18ktai2 fwbmr0d f44c6la"
              type="button"
            >
              <span
                class="fui-Button__icon rywnvv2"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.5 9a2 2 0 0 1 2 2c0 .97-.6 1.73-1.41 2.23-.82.5-1.91.77-3.09.77a6.02 6.02 0 0 1-3.09-.77C1.1 12.73.5 11.97.5 11c0-1.1.9-2 2-2h5Zm-5 1a1 1 0 0 0-1 1c0 .5.3 1 .93 1.38.63.38 1.54.62 2.57.62 1.03 0 1.94-.24 2.57-.63.63-.38.93-.86.93-1.37a1 1 0 0 0-1-1h-5Zm11.65-1a1.5 1.5 0 0 1 1.35 1.5c0 .77-.47 1.4-1.1 1.83-.64.42-1.49.67-2.4.67a4.6 4.6 0 0 1-1.92-.4c.16-.29.28-.6.35-.95.43.21.97.35 1.57.35.74 0 1.4-.2 1.84-.5.46-.3.66-.67.66-1a.5.5 0 0 0-.4-.49L14 10h-3.67a3 3 0 0 0-.58-.98L10 9h4.15Zm-1.92-5.5a2.25 2.25 0 0 1 2.02 2.25v.23A2.25 2.25 0 0 1 12 8L11.77 8a2.25 2.25 0 0 1-2-2.01l-.02-.23c0-1.24 1-2.25 2.25-2.25h.23ZM5 2.5A2.75 2.75 0 1 1 5 8a2.75 2.75 0 0 1 0-5.5Zm7 2A1.25 1.25 0 1 0 12 7a1.25 1.25 0 0 0 0-2.5Zm-7-1A1.75 1.75 0 1 0 5 7a1.75 1.75 0 0 0 0-3.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the items is not undefined 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  grid-gap: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  grid-gap: 0.5rem;
  height: calc(100vh - 8rem);
  overflow: auto;
}

.emotion-3 {
  display: grid;
  grid-template-columns: auto auto;
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  padding: 0.5rem;
}

.emotion-3:hover {
  background-color: #f5f5f5;
}

.emotion-4 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto auto;
  grid-gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  cursor: pointer;
}

<div
    class="fui-FluentProvider fui-FluentProviderr0 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <div
        data-testid="test-SidePanel"
      >
        <div
          data-testid="test-Content"
        >
          <div
            class="emotion-1"
          >
            <span
              class="fui-Input r1oeeo9n fui-SearchBox ___13yg2oi_15g8mz3 f1f5gg8d fhxju0i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fjuset5 f1xzfw5u"
            >
              <span
                class="fui-Input__contentBefore r1572tok fui-SearchBox__contentBefore"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.73 13.44a6.5 6.5 0 1 1 .7-.7l3.42 3.4a.5.5 0 0 1-.63.77l-.07-.06-3.42-3.41Zm-.71-.71A5.54 5.54 0 0 0 14 8.5a5.5 5.5 0 1 0-1.98 4.23Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <input
                class="fui-Input__input r12stul0 fui-SearchBox__input ___69a85s0_ca35df0 fk8j09s f1vdfbxk f18izjht fcoa6sg"
                placeholder="Search members"
                type="search"
                value=""
              />
              <span
                class="fui-Input__contentAfter r1572tok fui-SearchBox__contentAfter ___yrbim60_1xrsupy f1cnd47f f1ufnopg fniina8 f3tsq5r f1a3p1vp"
              >
                <span
                  aria-label="clear"
                  class="fui-SearchBox__dismiss r1pvzcuu"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    aria-hidden="true"
                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <div
              class="emotion-2"
            >
              <span
                class="fui-Text emotion-3 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
                role="button"
              >
                <span
                  aria-label="Adele Vance"
                  class="fui-Avatar r81b29z ___3oygws0_1lfz49j fq4mcun frvgh55 f13mqy1h"
                  id="avatar-r1"
                  role="img"
                >
                  <span
                    class="fui-Avatar__initials rip04v ___105uvta_5ja1qh0 f1f3ti53 fu4yj0j"
                    id="avatar-r1__initials"
                  >
                    AV
                  </span>
                </span>
                <span
                  class="fui-Text ___gbswv60_1h9bfvt fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f1cmbuwj"
                >
                  Adele Vance
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="test-Renderer"
        >
          <span
            aria-label="View members"
            class="fui-Text emotion-4 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            <button
              class="fui-Button r1alrhcs ___cpe5h10_1yhfyj7 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f18ktai2 fwbmr0d f44c6la"
              type="button"
            >
              <span
                class="fui-Button__icon rywnvv2"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.5 9a2 2 0 0 1 2 2c0 .97-.6 1.73-1.41 2.23-.82.5-1.91.77-3.09.77a6.02 6.02 0 0 1-3.09-.77C1.1 12.73.5 11.97.5 11c0-1.1.9-2 2-2h5Zm-5 1a1 1 0 0 0-1 1c0 .5.3 1 .93 1.38.63.38 1.54.62 2.57.62 1.03 0 1.94-.24 2.57-.63.63-.38.93-.86.93-1.37a1 1 0 0 0-1-1h-5Zm11.65-1a1.5 1.5 0 0 1 1.35 1.5c0 .77-.47 1.4-1.1 1.83-.64.42-1.49.67-2.4.67a4.6 4.6 0 0 1-1.92-.4c.16-.29.28-.6.35-.95.43.21.97.35 1.57.35.74 0 1.4-.2 1.84-.5.46-.3.66-.67.66-1a.5.5 0 0 0-.4-.49L14 10h-3.67a3 3 0 0 0-.58-.98L10 9h4.15Zm-1.92-5.5a2.25 2.25 0 0 1 2.02 2.25v.23A2.25 2.25 0 0 1 12 8L11.77 8a2.25 2.25 0 0 1-2-2.01l-.02-.23c0-1.24 1-2.25 2.25-2.25h.23ZM5 2.5A2.75 2.75 0 1 1 5 8a2.75 2.75 0 0 1 0-5.5Zm7 2A1.25 1.25 0 1 0 12 7a1.25 1.25 0 0 0 0-2.5Zm-7-1A1.75 1.75 0 1 0 5 7a1.75 1.75 0 0 0 0-3.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the items is undefined 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

.emotion-1 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto auto;
  grid-gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  cursor: pointer;
}

<div
    class="fui-FluentProvider fui-FluentProviderr3 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <div
        data-testid="test-SidePanel"
      >
        <div
          data-testid="test-Content"
        />
        <div
          data-testid="test-Renderer"
        >
          <span
            aria-label="View members"
            class="fui-Text emotion-1 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            <button
              class="fui-Button r1alrhcs ___cpe5h10_1yhfyj7 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f18ktai2 fwbmr0d f44c6la"
              type="button"
            >
              <span
                class="fui-Button__icon rywnvv2"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.5 9a2 2 0 0 1 2 2c0 .97-.6 1.73-1.41 2.23-.82.5-1.91.77-3.09.77a6.02 6.02 0 0 1-3.09-.77C1.1 12.73.5 11.97.5 11c0-1.1.9-2 2-2h5Zm-5 1a1 1 0 0 0-1 1c0 .5.3 1 .93 1.38.63.38 1.54.62 2.57.62 1.03 0 1.94-.24 2.57-.63.63-.38.93-.86.93-1.37a1 1 0 0 0-1-1h-5Zm11.65-1a1.5 1.5 0 0 1 1.35 1.5c0 .77-.47 1.4-1.1 1.83-.64.42-1.49.67-2.4.67a4.6 4.6 0 0 1-1.92-.4c.16-.29.28-.6.35-.95.43.21.97.35 1.57.35.74 0 1.4-.2 1.84-.5.46-.3.66-.67.66-1a.5.5 0 0 0-.4-.49L14 10h-3.67a3 3 0 0 0-.58-.98L10 9h4.15Zm-1.92-5.5a2.25 2.25 0 0 1 2.02 2.25v.23A2.25 2.25 0 0 1 12 8L11.77 8a2.25 2.25 0 0 1-2-2.01l-.02-.23c0-1.24 1-2.25 2.25-2.25h.23ZM5 2.5A2.75 2.75 0 1 1 5 8a2.75 2.75 0 0 1 0-5.5Zm7 2A1.25 1.25 0 1 0 12 7a1.25 1.25 0 0 0 0-2.5Zm-7-1A1.75 1.75 0 1 0 5 7a1.75 1.75 0 0 0 0-3.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
